@@ -19,12 +19,14 @@ package stroom.data.store.impl;
 import stroom.data.shared.DataInfoSection;
 import stroom.data.shared.DataInfoSection.Entry;
 import stroom.data.shared.UploadDataRequest;
+import stroom.data.store.api.DataService;
 import stroom.data.store.api.Store;
 import stroom.docref.DocRef;
 import stroom.docrefinfo.api.DocRefInfoService;
 import stroom.docstore.shared.DocRefUtil;
 import stroom.feed.api.FeedProperties;
 import stroom.feed.api.FeedStore;
+import stroom.meta.api.AttributeMapUtil;
 import stroom.meta.api.MetaService;
 import stroom.meta.shared.DataRetentionFields;
 import stroom.meta.shared.FindMetaCriteria;
@@ -209,6 +211,11 @@ class DataServiceImpl implements DataService {
     }
 
     @Override
+    public Map<String, String> metaAttributes(final long id) {
+        return attributeMapFactory.getAttributes(id);
+    }
+
+    @Override
     public List<DataInfoSection> info(final long id) {
         final ResultPage<MetaRow> metaRows = metaService.findDecoratedRows(
                 new FindMetaCriteria(MetaExpressionUtil.createDataIdExpression(id)));
@@ -225,7 +232,8 @@ class DataServiceImpl implements DataService {
             final List<DataInfoSection.Entry> entries = new ArrayList<>();
 
             final Map<String, String> attributeMap = metaRow.getAttributes();
-            final Map<String, String> additionalAttributes = attributeMapFactory.getAttributes(metaRow.getMeta());
+            final Map<String, String> additionalAttributes = attributeMapFactory.getAttributes(
+                    metaRow.getMeta().getId());
             final String files = additionalAttributes.remove("Files");
             attributeMap.putAll(additionalAttributes);
 
@@ -233,7 +241,7 @@ class DataServiceImpl implements DataService {
                     .keySet()
                     .stream()
                     .sorted()
-                    .collect(Collectors.toList());
+                    .toList();
             sortedKeys.forEach(key -> {
                 final String value = attributeMap.get(key);
                 if (value != null &&
@@ -242,7 +250,7 @@ class DataServiceImpl implements DataService {
                         !DataRetentionFields.RETENTION_UNTIL.equals(key) &&
                         !DataRetentionFields.RETENTION_RULE.equals(key)) {
 
-                    if (MetaFields.DURATION.getName().equals(key)) {
+                    if (MetaFields.DURATION.getFldName().equals(key)) {
                         entries.add(new DataInfoSection.Entry(key, convertDuration(value)));
                     } else if (key.toLowerCase().contains("time")) {
                         entries.add(new DataInfoSection.Entry(key, convertTime(value)));
@@ -260,7 +268,10 @@ class DataServiceImpl implements DataService {
             // Add additional data retention information.
             sections.add(new DataInfoSection("Retention", getDataRententionEntries(attributeMap)));
 
-            sections.add(new DataInfoSection("Files", Collections.singletonList(new Entry("", files))));
+            // Files are often very long so change the delimiter to \n
+            final String filesStr = String.join("\n", AttributeMapUtil.valueAsList(files));
+
+            sections.add(new DataInfoSection("Files", Collections.singletonList(new Entry("", filesStr))));
         }
         return sections;
     }
